--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 </head>
 
 <body>
-  <h1>WELCOME!</h1>
-  <ul></ul>
+  <h1>Welcome to the developer's site!
+    Our games:</h1>
+  <ul>
+    <li>5 nights at Timokha</li>
+    <li>5 nights at Timokha 2: Village</li>
+    <li>5 nights at Timokha 3: City</li>
+    <li>Escape from Timokha</li>
+    <li>T.D.Z. 3 Dark Way</li>
+    <li>T.D.Z. 4 Heart of Prypat</li>
+    We make our games with soul and conscience! You can check them out on our Google Play page!:
+    <p><a href="https://play.google.com/store/apps/dev?id=8281455265800638558&hl">Developer page</a></p>
+    <img src = "tima.jpg">
   <script src="script.js"></script>
 </body>
 
